@@ -2,6 +2,8 @@
  * #666: Fix error when running the "info" action with the "--match-archives" flag. Also fix the
    "--match-archives" flag to correctly override the "match_archives" configuration option for
    the "transfer", "list", "rlist", and "info" actions.
+ * #668: Fix error when running the "prune" action with both "archive_name_format" and "prefix"
+   options set.
 
 1.7.11
  * #479, #588: BREAKING: Automatically use the "archive_name_format" option to filter which archives
